# WarGame

./: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  WarGame.sln  WarGame.vcxproj  WarGame.vcxproj.filters  WarGame_lib.vcxproj  WarGame_lib.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  main.cpp  mapa.txt  player.cpp  player.h  rozkazy.txt  status.txt
test/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  test.cpp
